syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service2";
option java_outer_classname = "IntruderAlarmServiceImpl";

package IntruderAlarm;

// Interface exported by the server.
service IntruderAlarm {

  //Unary RPC
  rpc IntruderAlert (AlertRequest) returns (AlertResponse) {}

  //Server Stream RPC
  rpc LightOnAlert (LightRequest) returns (stream LightResponse) {}

}

message AlertRequest {
  bool intruder = 1;
}

message AlertResponse {
  string sentHelp = 1;  ;
}


message LightRequest {
  bool lightTrigger = 1;
}

message LightResponse {
  string lightsOn = 2;
}